--- a/book/_static/betterpythonpad.css
+++ b/book/_static/betterpythonpad.css
@@ -1,8 +1,12 @@
 div#pad {
     font-size: 12px;
-    height: 100vh;
+    height: 40em;
 }
 
 .CodeMirror pre.CodeMirror-line {
     box-shadow: unset;
+}
+
+.CodeMirror .CodeMirror-scroll {
+    height: 100%;
 }
